tests/specs/ecosystem/mdekstrand/hyperstatic/0_5_0_beta8.test
mdekstrand/hyperstatic/0.5.0-beta8
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Node'.
 */ export const h: HyperStatic<Node, Element> = {} as never;
                                ~~~~
    at file://<tmpdir>/browser/mod.ts:5:33

TS2304 [ERROR]: Cannot find name 'Element'.
 */ export const h: HyperStatic<Node, Element> = {} as never;
                                      ~~~~~~~
    at file://<tmpdir>/browser/mod.ts:5:39

Found 2 errors.

